# astrbot_plugin_palworld

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  NOTICE.md  README.md  SECURITY.md  _conf_schema.json  config.py  constants.py  install.sh  main.py  metadata.yaml  pyproject.toml  requirements.txt
.claude/rules/: ingame-theme.md  palworld-data.md
.github/workflows/: ci.yml
api/: __init__.py  docker_api.py  palworld_api.py
commands/: __init__.py  router.py
data/: arena.json  basecamp_rules.json  boss_spawns.json  bosses.json  breeding.json  building_recipes.json  buildings.json  buildings.json.bak_fix  cuisine.json  elements.json  fishing.json  human_names.json  implants.json  item_extra.json  items.json  items.json.bak_fix  items.json.bak_tags  lab_research.json  map_dungeons.json  map_ft_points.json  map_regions.json  map_regions.json.bak8  map_relics.json  map_transform.json  map_transform_tree.json  merchants.json  missions.json  pal_extra.json  pal_spawns.json  paldex.json  paldex.json.bak2  paldex.json.bak3  passive_stats.json  passives.json  progress_catalog.json  recipes.json  regions.json  resource_nodes.json  skill_fruits.json  skills.json  (+4 more)
data/fonts/: README.md
data/ingame/: manifest.json
docs/: DATA_QUALITY_REPORT.md  DEPLOY.md  DEVELOPMENT_ROADMAP.md  INGAME_ICON_COVERAGE.md  INGAME_UI_REFERENCE.md  PROJECT_STATUS.md  THEME_ICON_COVERAGE.md
palwork/: palsave.py
render/: __init__.py  assets.py  renderer.py  templates.py
services/: __init__.py  save_service.py
tests/: conftest.py  test_basehealth.py  test_breeding.py  test_commands.py  test_data_and_config.py  test_data_quality.py  test_dispatch.py  test_element_browse.py  test_game_data_tools.py  test_genus.py  test_growth.py  test_guild_enrich.py  test_guild_parse.py  test_help.py  test_human_names.py  test_icon_render.py  test_item_index.py  test_item_weight.py  test_map_classify.py  test_matroute.py  test_matuse.py  test_missions.py  test_mypower.py  test_paldex_traits.py  test_palsave.py  test_passfind.py  test_passive_icons.py  test_poimap.py  test_ranch.py  test_rank_scope.py  test_renderer.py  test_safety.py  test_security.py  test_services_and_api.py  test_squad.py  test_techtree.py  test_text_and_literals.py  test_theme.py  test_unknown_cmd.py  test_ux_hints.py  (+2 more)
tools/game_data/: README.md  build_breeding.py  build_ingame_preview.py  build_map_poi.py  compare_data.py  (+8 more)
utils/: __init__.py  security.py  steam_news.py  text.py
(+2 files in other folders)
